# note-mkdocs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: リポジトリを更新する.md  記事を書く.md
docs/: enviroment.md  index.md
docs/write/: code_block.md  code_inline.md
enviroment/: index.html
search/: search_index.json
write/code_block/: index.html
write/code_inline/: index.html
write/enviroment/: index.html
